# slowfs

./: .gitignore  README.md  pyproject.toml
assets/: fuse-slowfs.drawio
examples/: fuse_slowfs.py  high_level.py  test_fuse
notes/: implementation.md  summary-ostep.md
src/: util.py
src/linux/: sched.py  types.py
src/linux/block/: __init__.py  device.py  driver.py
src/linux/fs/: __init__.py  file.py  inode.py  super.py  vfs.py
tests/: conftest.py
tests/integration/: test_fs_manipulation.py
tests/unit/: test_bitmap.py  test_block.py  test_inode.py  test_super.py
